[gd_scene load_steps=6 format=3 uid="uid://snfxfvpxmei8"]

[ext_resource type="Script" path="res://scripts/unit_image_ui.gd" id="1_ti347"]
[ext_resource type="PackedScene" uid="uid://ehyk2phrxjvh" path="res://scenes/UI/AnimatedLabel.tscn" id="2_h2nu2"]
[ext_resource type="Texture2D" uid="uid://c0b0sawfyqtac" path="res://aseprite/fighter.png" id="2_wta4e"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ym2cl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pm64x"]

[node name="UnitImageUI" type="PanelContainer"]
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_ym2cl")
script = ExtResource("1_ti347")
animated_label_scene = ExtResource("2_h2nu2")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_wta4e")
stretch_mode = 5

[node name="BlessResultSpawnDelay" type="Timer" parent="."]

[node name="AnimatedTraitsPanel" type="Panel" parent="."]
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/panel = SubResource("StyleBoxEmpty_pm64x")

[connection signal="timeout" from="BlessResultSpawnDelay" to="." method="_on_bless_result_spawn_delay_timeout"]
